[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Sprites/Enemy/enemy.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Characters/Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 15.5979
height = 16.0808

[sub_resource type="Animation" id=2]
resource_name = "walk"
length = 0.75
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7 ]
}

[sub_resource type="CapsuleShape2D" id=3]
radius = 17.1005
height = 13.0757

[node name="Enemy" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Body" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="Body"]
scale = Vector2( -1, 1 )
texture = ExtResource( 1 )
hframes = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/walk = SubResource( 2 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
position = Vector2( 0.642797, -11.0243 )
scale = Vector2( 24.1435, 9.40997 )

[node name="Raycasts" type="Node2D" parent="."]

[node name="Detect_left_floor" type="RayCast2D" parent="Raycasts"]
position = Vector2( -25, 4 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Detect_right_floor" type="RayCast2D" parent="Raycasts"]
position = Vector2( 25, 4 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="Detect_right_wall" type="RayCast2D" parent="Raycasts"]
position = Vector2( 25, 0 )
enabled = true
cast_to = Vector2( 10, 0 )

[node name="Detect_left_wall" type="RayCast2D" parent="Raycasts"]
position = Vector2( -25, 0 )
enabled = true
cast_to = Vector2( -10, 0 )

[node name="DamageZone" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageZone"]
rotation = 1.5708
shape = SubResource( 3 )
[connection signal="body_entered" from="DamageZone" to="." method="_on_DamageZone_body_entered"]
